cedears/kube/memcache-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: memcache
  name: memcache
  namespace: cedears
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: memcache
  template:
    metadata:
      labels:
        app: memcache
    spec:
      containers:
        - image: memcached
          imagePullPolicy: Always
          name: jjo-memcache
          resources: {}
      restartPolicy: Always
status: {}
