cedears/kube/memcache-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memcache
  namespace: cedears
spec:
  ports:
    - name: memcache
      port: 11211
      targetPort: 11211
  selector:
    app: memcache
status:
  loadBalancer: {}
