cedears/kube/serve-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: serve
  namespace: cedears
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: serve
status:
  loadBalancer: {}
